[gd_scene load_steps=29 format=3 uid="uid://yh25m23sqpra"]

[ext_resource type="Script" uid="uid://h5nf74m70ijk" path="res://scripts/menuManager.gd" id="1_2owot"]
[ext_resource type="FontFile" uid="uid://dg14kclf6jted" path="res://assets/fonts/libre baskeville/LibreBaskerville-Regular.ttf" id="2_2owot"]
[ext_resource type="Texture2D" uid="uid://bqi4tpiuav81w" path="res://assets/imagenes/fondos/fondo menu7.jpeg" id="2_8jdmi"]
[ext_resource type="Texture2D" uid="uid://citeu0foibnt2" path="res://assets/imagenes/personajes/krisFeliz.png" id="3_4gv4q"]
[ext_resource type="Texture2D" uid="uid://ba6aj80p4o2fg" path="res://assets/imagenes/personajes/silueta Mateo.png" id="3_8jdmi"]
[ext_resource type="Script" uid="uid://dnkv3p7myaucf" path="res://scripts/menu_op.gd" id="4_6cq3m"]
[ext_resource type="FontFile" uid="uid://lh7yi4u1exu3" path="res://assets/fonts/libre baskeville/LibreBaskerville-Bold.ttf" id="5_5t3kx"]
[ext_resource type="Script" uid="uid://dqspm13v3xdwh" path="res://scripts/audioControl.gd" id="5_xqndx"]
[ext_resource type="AudioStream" uid="uid://crmiavqkqlsw4" path="res://assets/audio/SFX/recogeObjetoAgudo.wav" id="6_4gv4q"]
[ext_resource type="AudioStream" uid="uid://s21h87br30r6" path="res://assets/audio/SFX/sfxBarraVol.wav" id="6_yb3qj"]
[ext_resource type="Script" uid="uid://dgyuojqnf5dq2" path="res://scripts/selectorIdiomas.gd" id="7_i5l0x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6cq3m"]
bg_color = Color(0.14509805, 0.5294118, 0.77254903, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5t3kx"]
bg_color = Color(0.21176471, 0.34901962, 0.73333335, 0.88235295)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_builu"]
bg_color = Color(0.16862746, 0.6627451, 0.84705883, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_56ah5"]
bg_color = Color(0.14509805, 0.5294118, 0.77254903, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqndx"]
bg_color = Color(0.21176471, 0.34901962, 0.73333335, 0.88235295)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20bhr"]
bg_color = Color(0.16862746, 0.6627451, 0.84705883, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb3qj"]
bg_color = Color(0.14509805, 0.5294118, 0.77254903, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4gv4q"]
bg_color = Color(0.21181902, 0.34806502, 0.73494756, 0.88235295)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lji1a"]
bg_color = Color(0.16862746, 0.6627451, 0.84705883, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2owot"]
bg_color = Color(0.47555906, 0.45786387, 0.736133, 0.2901961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jdmi"]
bg_color = Color(0.15686275, 0.21176471, 0.4627451, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5l0x"]
bg_color = Color(0.14509805, 0.5294118, 0.77254903, 0.76862746)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6m0pt"]
bg_color = Color(0.21176471, 0.34901962, 0.73333335, 0.88235295)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11hni"]
bg_color = Color(0.16862746, 0.6627451, 0.84705883, 0.76862746)

[sub_resource type="Animation" id="Animation_5t3kx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuOp/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6cq3m"]
resource_name = "animacionOpciones"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuOp/PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.0717735, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56ah5"]
_data = {
&"RESET": SubResource("Animation_5t3kx"),
&"animacionOpciones": SubResource("Animation_6cq3m")
}

[node name="Menu" type="Control" node_paths=PackedStringArray("options_container", "options")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2owot")
options_container = NodePath("MenuOp")
options = NodePath("MenuOp/PanelContainer/opciones")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_right = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8jdmi")
expand_mode = 1

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(157, 299.99997)
scale = Vector2(0.43663308, 0.4223632)
texture = ExtResource("3_8jdmi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(983, 285)
scale = Vector2(0.41015625, 0.4243164)
texture = ExtResource("3_4gv4q")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Fondo" type="Sprite2D" parent="PanelContainer"]

[node name="LogoTitulo" type="Sprite2D" parent="PanelContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -161.5
offset_right = 190.0
offset_bottom = 161.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_6cq3m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5t3kx")
theme_override_styles/hover = SubResource("StyleBoxFlat_builu")
text = "ui_empezar"

[node name="op" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_56ah5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xqndx")
theme_override_styles/hover = SubResource("StyleBoxFlat_20bhr")
text = "ui_opciones"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxFlat_yb3qj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gv4q")
theme_override_styles/hover = SubResource("StyleBoxFlat_lji1a")
text = "ui_salir"

[node name="Audio" type="AudioStreamPlayer" parent="VBoxContainer"]

[node name="MenuOp" type="Control" parent="." node_paths=PackedStringArray("animacion")]
anchors_preset = 0
offset_left = 197.0
offset_top = 118.0
offset_right = 975.0
offset_bottom = 585.0
script = ExtResource("4_6cq3m")
animacion = NodePath("AnimationPlayer")

[node name="PanelContainer" type="PanelContainer" parent="MenuOp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -594.25
offset_top = -354.75
offset_right = 571.0
offset_bottom = 299.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2owot")

[node name="opciones" type="Control" parent="MenuOp/PanelContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MenuOp/PanelContainer/opciones"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -306.5
offset_top = -223.25
offset_right = 306.5
offset_bottom = 223.25
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8jdmi")
current_tab = 0

[node name="idioma" type="VBoxContainer" parent="MenuOp/PanelContainer/opciones/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/idioma"]
layout_mode = 2
text = "ui_idiomas"

[node name="OptionButton" type="OptionButton" parent="MenuOp/PanelContainer/opciones/TabContainer/idioma"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_i5l0x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6m0pt")
fit_to_longest_item = false
script = ExtResource("7_i5l0x")

[node name="volumen" type="VBoxContainer" parent="MenuOp/PanelContainer/opciones/TabContainer" node_paths=PackedStringArray("general", "musica", "efectos", "audioPlayer", "barraPlayer")]
visible = false
layout_mode = 2
script = ExtResource("5_xqndx")
general = NodePath("mainBox/sliderG")
musica = NodePath("musicaBox/sliderM")
efectos = NodePath("sfxBox/sliderSFX")
testSonido = ExtResource("6_4gv4q")
audioPlayer = NodePath("../../../../../VBoxContainer/Audio")
sonidoBarra = ExtResource("6_yb3qj")
barraPlayer = NodePath("../../../../../VBoxContainer/Audio")
metadata/_tab_index = 1

[node name="Label" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_5t3kx")
theme_override_font_sizes/font_size = 34
text = "ui_audio"

[node name="Label2" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_5t3kx")
theme_override_font_sizes/font_size = 12
text = " "

[node name="mainBox" type="HBoxContainer" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/mainBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 18
text = "ui_volumenGeneral"

[node name="menosG" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/mainBox"]
layout_mode = 2
text = " - "

[node name="sliderG" type="HSlider" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/mainBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
focus_mode = 0

[node name="masG" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/mainBox"]
layout_mode = 2
text = " + "

[node name="musicaBox" type="HBoxContainer" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/musicaBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 18
text = "ui_volumenMusica"

[node name="menosM" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/musicaBox"]
layout_mode = 2
text = " - "

[node name="sliderM" type="HSlider" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/musicaBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
focus_mode = 0

[node name="masM" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/musicaBox"]
layout_mode = 2
text = " + "

[node name="sfxBox" type="HBoxContainer" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/sfxBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 18
text = "ui_sfx"

[node name="menosSFX" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/sfxBox"]
layout_mode = 2
text = " - "

[node name="sliderSFX" type="HSlider" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/sfxBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
focus_mode = 0

[node name="masSFX" type="Button" parent="MenuOp/PanelContainer/opciones/TabContainer/volumen/sfxBox"]
layout_mode = 2
text = " + "

[node name="exit" type="Button" parent="MenuOp/PanelContainer/opciones"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.375
offset_top = -92.0
offset_right = 87.625
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_2owot")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_yb3qj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4gv4q")
theme_override_styles/hover = SubResource("StyleBoxFlat_11hni")
text = "ui_salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuOp"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_56ah5")
}

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/op" to="." method="_on_op_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="item_selected" from="MenuOp/PanelContainer/opciones/TabContainer/idioma/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MenuOp/PanelContainer/opciones/exit" to="MenuOp" method="_on_exit_pressed"]
